--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,29 @@ html {
   height: 100%;
 }
 
+@keyframes anvil {
+  0% {
+      transform: scale(0.96) translateY(0px);
+      opacity: 0;
+  }
+
+
+
+  100% {
+      transform: scale(1) translateY(0px);
+      opacity: 1;
+  }
+}
+
+.popup-content {
+  /* -webkit-animation: anvil 0.6s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards; */
+  transform: scale(0.7);
+  opacity: 0;
+  transition: all 0.3s;
+  animation: anvil 0.5s cubic-bezier(0.38, 0.1, 0.36, 0.9) forwards;
+  /* z-index: 9999999999; */
+}
+
 /* 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
